fixed spacing

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -21,5 +21,5 @@
 }
 
 .forecastSpace {
-  margin-right: 2.5rem;
+  margin-right: 1.5rem;
 }
